[tool.poetry]
name = "remote-fs"
version = "0.1.5"
description = "A tool to manage your remote filesystems (sshfs, mount_smbfs)"
authors = ["kintsu <k@kintsu.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kintsugi/remote-fs"

[tool.poetry.scripts]
remote-fs = "remote_fs:main"

[tool.poetry.dependencies]
python = "^3"
click = "^7.1.2"
setuptools = "^50.3.0"
shell = "^1.0.1"
pathvalidate = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
rope = "^0.18.0"
pylint = "^2.6.0"
neovim = "^0.3.1"
neovim-remote = "^2.4.0"
pynvim = "^0.4.2"
dephell = "^0.8.3"
twine = "^3.2.0"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
